traefik-v2.9.6-crd-http-https-externaldns/003-traefik.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.9.6
          args:
            - --api.insecure
            - --accesslog
            - --log
            - --log.level=DEBUG
            - --providers.kubernetescrd
            - --entrypoints.web.address=:8000
            - --entrypoints.websecure.address=:4443
            - --certificatesresolvers.default.acme.tlschallenge
            - --certificatesresolvers.default.acme.email=foo@example.com
            - --certificatesresolvers.default.acme.storage=acme.json
            # Please note that this is the staging Let's Encrypt server.
            # Once you get things working, you should remove that whole line altogether.
            - --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
          ports:
            - name: web
              containerPort: 8000
            - name: dashboard
              containerPort: 8080
            - name: websecure
              containerPort: 4443

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-svc
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "30s"
    external-dns.alpha.kubernetes.io/hostname: subdomain.example.com

spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - port: 80
      name: web
      targetPort: 8000
    - port: 8080
      name: dashboard
      targetPort: 8080
    - port: 443
      name: websecure
      targetPort: 4443
